--- a/mystyle.css
+++ b/mystyle.css
@@ -145,7 +145,7 @@
     visibility: visible;
   }
   #load-screen {
-    background: url(images/header-back.png);
+    background: url(image/header-back.png);
     position: fixed;
     z-index: 10000;
     top: 0px;
@@ -157,7 +157,7 @@
     width: 500px;
     height: 500px;
     margin: 10% auto;
-    background: url(images/loader.gif);
+    background: url(image/loader.gif);
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: center;
