--- a/mystyle.css
+++ b/mystyle.css
@@ -2,7 +2,10 @@
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
     color: #818181;
-  }
+p{
+  color:White;
+  background-color:white;
+}
   h1:hover {
     color:lime;
     font-weight: bold;
