--- a/mystyle.css
+++ b/mystyle.css
@@ -2,10 +2,14 @@
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
     color: #818181;
-p{
-  color:White;
-  background-color:white;
-}
+  a{
+  color: White;
+  background-color: Black;
+  }
+  a:hover{
+    background-color: Green;
+    color: red;
+  }
   h1:hover {
     color:lime;
     font-weight: bold;
