--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
     color: #818181;
+  }
   a {
   color: White;
   background-color: Black;
