--- a/mystyle.css
+++ b/mystyle.css
@@ -144,6 +144,25 @@
     -webkit-animation-duration: 1s;
     visibility: visible;
   }
+#load-screen {
+    background: url(image/header-back.png);
+    position: fixed;
+    z-index: 10000;
+    top: 0px;
+    width: 100%;
+    height: 1600px;
+}
+
+#loading {
+    width: 500px;
+    height: 500px;
+    margin: 10% auto;
+    background: url(image/loader.gif);
+    background-size: 40%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
   @keyframes slide {
     0% {
       opacity: 0;
