--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,17 @@
     line-height: 1.8;
     color: #818181;
   }
+  a{
+    background-color:black;
+    color:white;
+  }
+
+  a:hover{
+    background:green;
+    color:red;
+  
+  }
+
   h1:hover {
     color:lime;
     font-weight: bold;
