--- a/mystyle.css
+++ b/mystyle.css
@@ -171,7 +171,7 @@
     background-repeat: no-repeat;
     background-position: center;
 }
-.item{
+.picture{
   border-style="solid";
   border-color="red";
 }
