--- a/mystyle.css
+++ b/mystyle.css
@@ -173,7 +173,7 @@
 }
 .picture{
   border-radius: 25px;
-  border: 3px solid #9900cc;
+  border: 3px solid black;
   padding: 20px;
   width: 70%;
 }
