--- a/mystyle.css
+++ b/mystyle.css
@@ -153,16 +153,16 @@
     -webkit-animation-duration: 1s;
     visibility: visible;
   }
-#load-screen {
+  #load-screen {
     background: url(image/header-back.png);
     position: fixed;
     z-index: 10000;
     top: 0px;
     width: 100%;
     height: 1600px;
-}
+  }
 
-#loading {
+  #loading {
     width: 500px;
     height: 500px;
     margin: 10% auto;
@@ -170,13 +170,28 @@
     background-size: 40%;
     background-repeat: no-repeat;
     background-position: center;
-}
-.picture{
+  }
+  .picture{
   border-radius: 25px;
   border: 3px solid black;
   padding: 20px;
   width: 70%;
-}
+  }
+.open .dropdown-toggle {
+    color: #fff;
+    background-color: #555 !important;
+    font-size:larger;
+  }
+  .dropdown-menu li a {
+    color: #000 !important;
+  }
+  .dropdown-menu li a:hover {
+    background-color: #f4511e !important;
+    color: #fff !important;
+  }
+  .dropdown {
+    font-size:larger;
+  }
 
   @keyframes slide {
     0% {
