--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,7 @@
   body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
-    color: #818181;
+    color: black;
   }
   a{
     background-color:black;
@@ -31,7 +31,7 @@
     margin-bottom: 30px;
   }  
   .jumbotron {
-    background: linear-gradient(to top, #ff0000 0%, #ffffcc 100%);
+    background: linear-gradient(to top, white 0%, black 100%);
     color: #fff;
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
