--- a/mystyle.css
+++ b/mystyle.css
@@ -8,25 +8,29 @@
     color:white;
   }
   a:hover{
-    background:green;
-    color:red;
+    background-color: white;
+    color:black;
   }
 
   h1:hover {
     color:lime;
     font-weight: bold;
   }
-  h2 {
+  .bg-grey.h2.h4 {
     font-size: 24px;
     text-transform: uppercase;
-    color: #303030;
+    color: white;
     font-weight: 600;
     margin-bottom: 30px;
   }
-  h4 {
+  .container-fluid.h2:hover .h4:hover {
+    color: white;
+    background-color: black;
+  }
+  .container-fluid.h4 {
     font-size: 19px;
     line-height: 1.375em;
-    color: #303030;
+    color: black;
     font-weight: 400;
     margin-bottom: 30px;
   }  
@@ -38,16 +42,71 @@
   }
   .container-fluid {
     padding: 60px 50px;
+    color : black
+  }
+  .container-fluid:hover {
+    padding: 60px 50px;
+  }
+  .container-fluid .h2.h4 {
+    padding: 60px 50px;
+    color : black
   }
   .bg-grey {
-    background-color: #f6f6f6;
+    background-color: black;
+    color: white;
   }
+  .bg-greyhover {
+    background-color: white;
+    color: black;
+  }
+  #services .col-sm-4 {
+    padding: 60px 50px;
+    border: double;
+    border-color: white;
+    border-width: 15px;
+    border-radius: 25px;
+    border-start-start-radius: 10px;
+  }
+  #portfolio .col-sm-4 {
+    background-color: black;
+    padding: 60px 50px;
+    border: double;
+    border-color: white;
+    border-width: 15px;
+    border-radius: 25px;
+    border-start-start-radius: 10px;
+  }
+  .col-sm-8{
+    padding: 60px 50px;
+    border: double;
+    border-color: black;
+    border-width: 15px;
+    border-radius: 25px;
+    border-start-start-radius: 10px;
+  }
+  .col-sm-8{
+    padding: 60px 50px;
+    border: double;
+    border-color: black;
+    border-width: 15px;
+    border-radius: 25px;
+    border-start-start-radius: 10px;
+  }
+  #about .col-sm-8{
+    padding: 60px 50px;
+    border: double;
+    border-color: white;
+    border-width: 15px;
+    border-radius: 25px;
+    border-start-start-radius: 10px;
+  }
+  
   .logo-small {
-    color: #f4511e;
+    color: white;
     font-size: 50px;
   }
   .logo {
-    color: #f4511e;
+    color: white;
     font-size: 200px;
   }
   .thumbnail {
@@ -55,6 +114,7 @@
     border: none;
     border-radius: 0;
   }
+  
   .thumbnail img {
     width: 100%;
     height: 100%;
@@ -62,13 +122,13 @@
   }
   .carousel-control.right, .carousel-control.left {
     background-image: none;
-    color: #f4511e;
+    color: white;
   }
   .carousel-indicators li {
-    border-color: #f4511e;
+    border-color:white;
   }
   .carousel-indicators li.active {
-    background-color: #f4511e;
+    background-color: red ;
   }
   .item h4 {
     font-size: 19px;
@@ -78,10 +138,12 @@
     margin: 70px 0;
   }
   .item span {
-    font-style: normal;
+    font-style: normal; 
+    color: white;
+    background-color: black;
   }
   .panel {
-    border: 1px solid #f4511e; 
+    border: 1px solid black; 
     border-radius:0 !important;
     transition: box-shadow 0.5s;
   }
@@ -89,13 +151,13 @@
     box-shadow: 5px 0px 40px rgba(0,0,0, .2);
   }
   .panel-footer .btn:hover {
-    border: 1px solid #f4511e;
+    border: 1px solid black;
     background-color: #fff !important;
-    color: #f4511e;
+    color: black;
   }
   .panel-heading {
     color: #fff !important;
-    background-color: #f4511e !important;
+    background-color: black !important; 
     padding: 25px;
     border-bottom: 1px solid transparent;
     border-top-left-radius: 0px;
@@ -106,6 +168,10 @@
   .panel-footer {
     background-color: white !important;
   }
+  .panel-body{
+    color: white;
+    background-color: darkgray;
+  }
   .panel-footer h3 {
     font-size: 32px;
   }
@@ -115,12 +181,13 @@
   }
   .panel-footer .btn {
     margin: 15px 0;
-    background-color: #f4511e;
+    background-color: black;
     color: #fff;
   }
   .navbar {
+    color: black;
     margin-bottom: 0;
-    background-color: #f4511e;
+    background-color:white;
     z-index: 9999;
     border: 0;
     font-size: 12px !important;
@@ -130,15 +197,16 @@
     font-family: Montserrat, sans-serif;
   }
   .navbar li a, .navbar .navbar-brand {
-    color: #fff !important;
+    color: black !important;
+    background-color: white;
   }
   .navbar-nav li a:hover, .navbar-nav li.active a {
-    color: #f4511e !important;
+    color: black !important;
     background-color: #fff !important;
   }
   .navbar-default .navbar-toggle {
     border-color: transparent;
-    color: #fff !important;
+    color: black !important;
   }
   footer .glyphicon {
     font-size: 20px;
@@ -173,7 +241,7 @@
   }
   .picture{
   border-radius: 25px;
-  border: 3px solid black;
+  border: 3px solid white;
   padding: 20px;
   width: 70%;
   }
