--- a/mystyle.css
+++ b/mystyle.css
@@ -78,13 +78,9 @@
     border-radius: 25px;
     border-start-start-radius: 10px;
   }
-  .col-sm-8{
-    padding: 60px 50px;
-    border: double;
-    border-color: black;
-    border-width: 15px;
-    border-radius: 25px;
-    border-start-start-radius: 10px;
+  .col-sm-8 h2:hover, .col-sm8 h4:hover{
+    color: white;
+    background: black;
   }
   #about .col-sm-8{
     padding: 60px 50px;
@@ -93,6 +89,11 @@
     border-width: 15px;
     border-radius: 25px;
     border-start-start-radius: 10px;
+  }
+
+  #about .col-sm-8 h2:hover{
+    color:black;
+    background-color: white;
   }
   
   .logo-small {
